polished everything